--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "express-validator": "^7.3.1",
     "helmet": "^8.1.0",
     "mongoose": "^9.1.5",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
